# server/src/controller/authController.js
@@ -1,8 +1,35 @@
 const User = require('../model/User');
 const bcrypt = require('bcrypt');
 const jwt = require("jsonwebtoken");
+const googleOAuth = require('../util/googleOAuth');
 
 class AuthController{
+    // POST /loginGoogle
+    async loginGoogle(req, res, next) {
+        try {
+            const tokenId = req.body.tokenId;
+            const profile = await googleOAuth.getProfileInfo(tokenId);
+            const user = await User.findOne({socialId: profile.id});
+            if(user) {
+                return next(user);
+            }
+            const ggUser = new User({
+                name: profile.displayName,
+                email: (profile.emails[0].value || '').toLowerCase(),
+                image: profile.photos[0].value,
+                socialId: profile.id,
+                role: 0,
+            });
+            console.log(profile)
+            const newUser = await ggUser.save();
+            return next(newUser);
+        } catch (error) {
+            res.status(400);
+            return res.json({
+                msg: "can't login"
+            })
+        }
+    }
     // GET /newAdmin
     async newAdmin (req, res) {
         try {
@@ -30,10 +57,15 @@ class AuthController{
 
         const jwtToken = jwt.sign(
             { id: req.user.id},
-            process.env.JWT_SECRET || 'key'
+            process.env.JWT_SECRET || 'key',
+            { expiresIn : '1d' }
         );
         res.status(200);
-        return res.json({ msg: "Welcome!", token: jwtToken });
+        return res.json({ 
+            msg: "Welcome!", 
+            username: req.user.name,
+            token: jwtToken 
+        });
     }
     // auth/logout
     logOut (req, res) {
